# data-extraction

./: .coverage  .coveragerc  .ruff.toml  .yamllint  Makefile  Makefile.bak  Makefile.tmp  README.md  dummy.txt  pyproject.toml  pyproject.toml.bak  pytest.ini  requirements-dev.txt  requirements.txt  setup_ci.sh
.github/workflows/: ci.yml  data-pipeline.yml
data/: customers.json  sales.csv  warehouse.db
data/cleaned/: orders_cleaned.csv  orders_cleaned.parquet
data/processed/: orders_customers_users.csv  orders_customers_users.parquet
data_extraction_anwar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
queries/: top_cities.sql
reports/: summary.md  weekly_report.md
src/: cli.py  eda.py  extract_pipeline.py  load_db.py  report.py  transform.py  utils.py  validate.py
src/data_extraction_anwar.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_utils.py
