[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-extraction-anwar"
version = "0.1.0"
description = "Toy data extraction / transform / load demo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "requests",
  "python-dotenv",
  "sqlalchemy",
  "matplotlib",
]

[project.scripts]
datax = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
src = "src"

